# Portfolio

./: README.md
DataLake_Project/: .dockerignore  (+4 more)
RL_Robot/: .gitignore  README.md  pyproject.toml
RL_Robot/artifacts/: README.md
RL_Robot/artifacts/runs_sac_curriculum/20260510_003902_sac_curriculum_air/: config.yaml  metadata.json
RL_Robot/configs/: README.md
RL_Robot/configs/PPO/: ppo_dense.yaml  ppo_penalized.yaml  ppo_shaped.yaml  ppo_shaped_air.yaml  ppo_sparse.yaml
RL_Robot/configs/SAC/: sac_curriculum_air.yaml  sac_dense.yaml  sac_penalized.yaml  sac_penalized_air.yaml  sac_shaped.yaml  sac_shaped_air.yaml  sac_sparse_her.yaml  sac_sparse_her_air.yaml  sac_sparse_her_air_parallel.yaml
RL_Robot/report/: README.md
RL_Robot/report/Compare/: README.md
RL_Robot/report/Compare/assignment_summary/: collision_penalty_impact.csv  final_ppo_vs_sac_table.csv  final_ppo_vs_sac_table.md  final_results.md  ppo_vs_sac_air_shaped_1m_summary.csv  reward_ablation_300k_summary.csv  reward_ablation_discussion.md  sac_multiseed_evaluation.md
RL_Robot/report/Compare/final_visual_board/: index.html
RL_Robot/report/PPO/: README.md
RL_Robot/report/SAC/: README.md
RL_Robot/scripts/: build_visual_board.py  check_acceleration.py  compose_training_video.py  record_goal_scenarios.py  record_training_progress.py  run_experiment_matrix.py  run_sac_multiseed.py  smoke_test.py  visualize_policy.py
RL_Robot/src/robot_arm_rl/: __init__.py  callbacks.py  compare.py  config.py  envs.py  evaluate.py  paths.py  sb3.py  train.py  training_report.py  visualize.py  wrappers.py
(+533 files in other folders)
